ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victory-royale
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: victory-royale
              port:
                number: 8888
